--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcsh 'Detective and mystery stories'
 - !lcc 'PZ'
 - !lcsh 'Aeronautics -- Juvenile fiction'
+- GITenberg
 title: Trackers of the Fog Pack; Or, Jack Ralston Flying Blind
 url: http://www.gutenberg.org/ebooks/45973
